Bug 967505 - Fix build bustage on a CLOSED TREE.